--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -3,7 +3,7 @@
   <i class='fa fa-refresh pull-right cursor refresh' style="margin-top: 3px;margin-right: 3px;"></i>
   <i title="#local_lastupdate_name#" class='fa pull-right' style="margin-top: 6px;margin-right: 3px;font-size: 0.7em;">#local_lastupdate#</i>
   <span class="cmd cmd-widget" data-cmd_id="#local_refresh_id#" style="display:none;"></span>
-  <center class="widget-name"><strong><a href="#eqLink#" style="font-size : 1.1em;#hideEqLogicName#">#name_display# </strong></a></center>
+  <center class="widget-name"><strong><a href="#eqLink#" style="font-size : 1.1em;#hideEqLogicName#">#name_display#</strong></a> #local_stovetype#</center>
   <div>
     #cmd#
   </div>
