--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -1,6 +1,6 @@
 <div id="plugin_container" class="eqLogic-widget eqLogic allowResize" style="width:#width#;height:#height#;border:#border#;border-radius:#border-radius#;background-color: #background-color#;color: #color#; #style#" data-category="" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" >
   <span class="statusCmd" style="position : absolute;left : 5px; width : 30px;z-index: 1030;"></span>
-  <span class="cmd refresh pull-right cursor" data-cmd_id="14419" style="margin-top: 2px;margin-right: 2px;">
+  <span class="cmd refresh pull-right cursor" data-cmd_id="#local_refresh_id#" style="margin-top: 2px;margin-right: 2px;">
     <i>#local_lastupdate#</i>
     <i class="fas fa-sync"></i>
   </span>
