--- a/core/template/dashboard/action.html
+++ b/core/template/dashboard/action.html
@@ -6,14 +6,7 @@
 <script>
   $('.eqLogic[data-eqLogic_id=#eqlogicid#] .#cmd_id#_selectCmd').on('#action#', function () {
     $('.eqLogic[data-eqLogic_id=#eqlogicid#] .statusCmd').append('<i data-rikaha="processing" class="fas fa-rss" style="margin-top: 3px;margin-right: 3px;"></i>');
-    jeedom.cmd.execute({
-      id: '#cmd_id#',
-      value: $(this).val()
-    });
+    jeedom.cmd.execute({id: '#cmd_id#', value: {rhvalue: $(this).value()}});
     setTimeout(function(){$("[data-rikaha=processing]").remove();}, 2500);
   });
-
-
-
-
 </script>
